# snip_gen

./: .mypy.ini  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yaml
snip_gen/: __init__.py  __main__.py  analyze_coverage.py  gen_seed.py  gen_snippet.py  llm_handler.py  prompts.py  typehints.py  verify_code.py
snip_gen/fix/: __init__.py  fix_def.py
snip_gen/tcl/: check_def.tcl
